Thu Jul 12 11:45:05 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/conv_doc.pl, contrib/parse_doc.pl: Fixed EOF handling in
	dehyphenation, fixed to handle %xx codes in title made from URL.

	* contrib/doc2html/doc2html.pl, contrib/doc2html/pdf2html.pl,
	contrib/doc2html/swf2html.pl: Fixed to handle %xx codes in URL title.

Thu Jul  5 11:23:40 2001  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* db/dist/config.guess: Update with more recent GNU version that
	recognizes various flavors of Mac OS X automatically.

	* htlib/DB2_db.cc: Only #include <malloc.h> if we have it. Fixes
	compilation problems on Mac OS X.

	* htlib/String.cc: Include <iostream.h> instead of depreciated
	<stream.h>. Fixes compilation problems with Mac OS X.

	* htlib/Configuration.cc: Make sure we never try to operate on
	strings of no length--accessing string[-1] is a bug--exposed on
	Mac OS X.

Fri Jun 29 11:56:25 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc (got_redirect): Allow the redirect to accept
	relative redirects instead of just full URLs.

Fri Jun 22 16:25:21 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/THANKS.html: Credit Marc Pohl and Robert Marchand.

	* htsearch/Display.cc (buildMatchList): Fix date_factor calculation
	to avoid 32-bit int overflow after multiplication by 1000, and avoid
	repetitive time(0) call, as contributed by Marc Pohl.  Also move the
	localtime() call up before gmtime() call, to avoid clobbering gmtime's
	returned static structure (my thinko).

Tue Jun 19 17:07:01 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (setVariables): Fixed handling of
	build_select_lists attribute, to deal with new restrict & exclude
	attributes.

Fri Jun 15 17:45:40 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/require.html: Added mentions of accents, prefix & substring,
	taken from 3.2.0b4.
	* htdoc/htfuzzy: Added blurb on accents algorithm, taken from 3.2.0b4.